fix: social network connection disabled (#259)
* fix: social network connection disabled

* fix: inscription without google & facebook

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="uk-width-large uk-align-center">
     <h2 class="uk-text-center title"><%= t('.sign_up') %></h2>
 
-    <%= render 'devise/shared/omniauth' %>
+    <%#= render 'devise/shared/omniauth' %>
 
     <hr class="uk-divider-icon">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
