fix: add name and firstname to sign_up (#262)

--- a/app/views/producer/home/new.html.erb
+++ b/app/views/producer/home/new.html.erb
@@ -3,8 +3,8 @@
 
     <%= simple_form_for(@user, url: createproducer_path) do |f| %>
 
-      <%= f.input :first_name, required: true, autofocus: true %>
-      <%= f.input :last_name, required: true, autofocus: true %>
+      <%#= f.input :first_name, required: true, autofocus: true %>
+      <%#= f.input :last_name, required: true, autofocus: true %>
       <%= f.input :bio, label: "Veuillez renseigner une description", input_html: {class: "uk-textarea textarea", rows: "5"}, input_class: false %>
 
 
