--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,31 @@
-<nav class="uk-navbar-container navbar-recipy" uk-navbar="mode: click">
+<nav class="uk-navbar-container navbar-recipy" uk-navbar>
   <%= link_to 'Recipy', unauthenticated_cook_root_path, class: 'uk-navbar-item uk-logo' %>
   <div class="uk-navbar-right">
     <ul class="uk-navbar-nav uk-visible@s">
       <li class="<%= current_page_class?(search_path) %>"><%= link_to t('search.title'), search_path %></li>
+      <li>
+        <a href="#">
+          <%= t('navbar.producers') %>
+        </a>
+        <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
+          <ul class="uk-nav uk-navbar-dropdown-nav">
+            <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>">
+              <%= link_to unauthenticated_producer_root_path do %>
+                <span class="uk-margin-small-right" uk-icon="icon: folder"></span><%= t('navbar.producer.list') %>
+              <% end %>
+            </li>
+            <li class="<%= current_page_class?(point_of_sales_path) %>">
+              <%= link_to point_of_sales_path do %>
+                <span class="uk-margin-small-right" uk-icon="icon: cart"></span><%= t('navbar.producer.point_of_sales') %>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </li>
       <% if user_signed_in? %>
-        <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>"><%= link_to "Carnets de recette", notebooks_path %></li>
-        <li class="<%= current_page_class?(point_of_sales_path) %>"><%= link_to "Liste de course", shopping_lists_path %></li>
         <li>
           <a href="#">
             <%= current_user.email %>
-            <span class="uk-icon uk-margin-small-left" uk-icon="icon: chevron-down"></span>
           </a>
           <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
             <ul class="uk-nav uk-navbar-dropdown-nav">
@@ -19,13 +35,13 @@
                 <% end %>
               </li>
               <li class="<%= current_page_class?(notebooks_path) %>">
-                <%= link_to unauthenticated_producer_root_path do %>
-                  <span class="uk-margin-small-right" uk-icon="icon: folder"></span><%= "Producteur" %>
+                <%= link_to notebooks_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: bookmark"></span><%= t('navbar.notebooks') %>
                 <% end %>
               </li>
               <li class="<%= current_page_class?(shopping_lists_path) %>">
-                <%= link_to point_of_sales_path do %>
-                  <span class="uk-margin-small-right" uk-icon="icon: cart"></span><%= "Point de vente" %>
+                <%= link_to shopping_lists_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: list"></span><%= t('navbar.shopping_lists') %>
                 <% end %>
               </li>
               <li class="<%= current_page_class?(edit_user_registration_path) %>">
@@ -40,6 +56,7 @@
                   <% end %>
                 </li>
               <% end %>
+              <li class="uk-nav-divider"></li>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete do %>
                   <span class="uk-margin-small-right" uk-icon="icon: sign-out"></span><%= t('navbar.log_out') %>
@@ -49,8 +66,6 @@
           </div>
         </li>
       <% else %>
-        <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>"><%= link_to t('navbar.producers'), unauthenticated_producer_root_path %></li>
-        <li class="<%= current_page_class?(point_of_sales_path) %>"><%= link_to t('navbar.point_of_sales'), point_of_sales_path %></li>
         <li class="<%= current_page_class?(new_user_session_path) %>"><%= link_to t('navbar.sign_in'), new_user_session_path %></li>
       <% end %>
     </ul>
@@ -66,9 +81,22 @@
     <h3>Navigation</h3>
     <ul class="uk-nav uk-nav-default">
       <li class="<%= current_page_class?(search_path) %>"><%= link_to t('search.title'), search_path %></li>
+      <li>
+        <a href="#"><%= t('navbar.producers') %></a>
+        <ul class="uk-nav-sub">
+          <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>">
+            <%= link_to unauthenticated_producer_root_path do %>
+              <span class="uk-margin-small-right" uk-icon="icon: folder"></span><%= t('navbar.producer.list') %>
+            <% end %>
+          </li>
+          <li class="<%= current_page_class?(point_of_sales_path) %>">
+            <%= link_to point_of_sales_path do %>
+              <span class="uk-margin-small-right" uk-icon="icon: cart"></span><%= t('navbar.producer.point_of_sales') %>
+            <% end %>
+          </li>
+        </ul>
+      </li>
       <% if user_signed_in? %>
-        <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>"><%= link_to "Carnets de recette", notebooks_path %></li>
-        <li class="<%= current_page_class?(point_of_sales_path) %>"><%= link_to "Liste de course", shopping_lists_path %></li>
         <li class="uk-parent">
           <a href="#"><%= current_user.email %></a>
           <ul class="uk-nav-sub">
@@ -78,13 +106,13 @@
               <% end %>
             </li>
             <li class="<%= current_page_class?(notebooks_path) %>">
-              <%= link_to unauthenticated_producer_root_path do %>
-                <span class="uk-margin-small-right" uk-icon="icon: folder"></span><%= "Producteur" %>
+              <%= link_to notebooks_path do %>
+                <span class="uk-margin-small-right" uk-icon="icon: bookmark"></span><%= t('navbar.notebooks') %>
               <% end %>
             </li>
             <li class="<%= current_page_class?(shopping_lists_path) %>">
-              <%= link_to point_of_sales_path do %>
-                <span class="uk-margin-small-right" uk-icon="icon: cart"></span><%= "Point de vente" %>
+              <%= link_to shopping_lists_path do %>
+                <span class="uk-margin-small-right" uk-icon="icon: list"></span><%= t('navbar.shopping_lists') %>
               <% end %>
             </li>
             <li class="<%= current_page_class?(edit_user_registration_path) %>">
@@ -99,6 +127,7 @@
                 <% end %>
               </li>
             <% end %>
+            <li class="uk-nav-divider"></li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
                 <span class="uk-margin-small-right" uk-icon="icon: sign-out"></span><%= t('navbar.log_out') %>
