--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,8 @@ progress.uk-progress[value]::-webkit-progress-value {
   right: 0;
   top: 0;
   height: 100vh;
-  width: 250px;
+  max-width: 400px;
+  min-width: 200px;
   flex-direction: column-reverse;
 
   .notification {
@@ -141,10 +142,11 @@ progress.uk-progress[value]::-webkit-progress-value {
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     margin: 5px 0;
-    border-radius: 3px;
+    border-radius: 4px;
     text-align: center;
     padding: 10px 5px;
     color: $recipy-notification-content;
+    box-shadow: 0px 2px 7px $recipy-notification-shadow;
 
     &.alert {
       background-color: $recipy-notification-alert;
