--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -15,9 +15,10 @@ $navbar-logo-height: 45px;
 /*
 ** Notification
 */
-$recipy-notification-content: #474747;
-$recipy-notification-default: darken($color: #FBFBFB, $amount: 50%);
-$recipy-notification-alert: #ffbc51;
-$recipy-notification-notice: #aae0de;
-$recipy-notification-success: #62e55e;
-$recipy-notification-error: #e55e5e;
+$recipy-notification-content: #2c3e50;
+$recipy-notification-default: #bdc3c7;
+$recipy-notification-alert: #f1c40f;
+$recipy-notification-notice: #3498db;
+$recipy-notification-success: #2ecc71;
+$recipy-notification-error: #e74c3c;
+$recipy-notification-shadow: #2c3e50;
