--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -9,7 +9,13 @@
     <div class="uk-width-xxlarge">
       <%= f.input :title, label: t("recipe.title.title") %>
       <%= f.file_field :image %>
-      <%= f.input :recipe_category_ids, :label => t("recipe.title.category"), collection: RecipeCategory.all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {id: "recipe-category-select", multiple: true}, defaults: {input_class: ""} %>
+      <%= f.input :recipe_category_ids, :label => t("recipe.title.category"), collection: RecipeCategory.all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+        multiple: true,
+        slimselect: true,
+        slimselectNoResult: t('slimselect.categories.no_result'),
+        slimselectSearchPlaceholder: t('slimselect.categories.search_placeholder'),
+        slimselectPlaceholder: t('slimselect.categories.placeholder'),
+      }, defaults: {input_class: ""} %>
       <%= f.input :description, label: t("recipe.title.description"), input_html: {class: "uk-textarea textarea", rows: "5"}, input_class: false %>
     </div>
   </div>
@@ -29,7 +35,13 @@
   <hr class="uk-divider-icon">
   <div class="uk-position-bottom-center uk-position-relative">
     <div class="uk-width-xxlarge">
-      <%= f.input :utensil_ids, :label => t("recipe.title.utensil"), collection: Utensil.all.map {|v| [v.title, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {id: "utensils-select", multiple: true}, defaults: {input_class: ""} %>
+      <%= f.input :utensil_ids, :label => t("recipe.title.ustensil"), collection: Utensil.all.map {|v| [v.title, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+        multiple: true,
+        slimselect: true,
+        slimselectNoResult: t('slimselect.ustensils.no_result'),
+        slimselectSearchPlaceholder: t('slimselect.ustensils.search_placeholder'),
+        slimselectPlaceholder: t('slimselect.ustensils.placeholder'),
+      }, defaults: {input_class: ""} %>
       <%= f.input :steps_raw, as: :text, label: t("recipe.title.step"), input_html: {class: "uk-textarea textarea", rows: "5", id: "steps_textarea"}, input_class: false %>
       <%= f.input :difficulty, as: :range, label: "#{t("recipe.title.difficulty")}:", input_class: false, input_html: {class: "uk-range", step: 1, max: 10, min: 0, oninput: "changeRangeValue()"} %>
       <div class="uk-margin-medium" uk-grid>
