--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -18,7 +18,13 @@
         <hr class="uk-divider-icon">
     </div>
     <%= f.input :difficulty, :label => t("search.difficulty"), :prompt => t("search.difficulty_max"), :selected => @search_difficulty, collection: 0..10, as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s" %>
-    <%= f.input :ingredients, :label => t("search.ingredient"), :selected => @search_ingredients, collection: @ingredients_select, as: :select, :include_blank => false, input_class: false, input_html: { id: "ingredients-select", multiple: true } , wrapper_class: "uk-width-1-4@s", defaults: { input_class: "" } %>
+    <%= f.input :ingredients, :label => t("search.ingredient"), :selected => @search_ingredients, collection: @ingredients_select, as: :select, :include_blank => false, input_class: false, input_html: {
+        multiple: true,
+        slimselect: true,
+        slimselectNoResult: t('slimselect.ingredients.no_result'),
+        slimselectSearchPlaceholder: t('slimselect.ingredients.search_placeholder'),
+        slimselectPlaceholder: t('slimselect.ingredients.placeholder'),
+    } , wrapper_class: "uk-width-1-4@s", defaults: { input_class: "" } %>
     <%= f.input :cooking_time, :label => t("search.cooking_time"), :prompt => t("search.time_max"), :selected => @search_time, collection: (0..@time_max).step(5), as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s" %>
     <%= f.input :sort, :label => t("search.sort_by"), :prompt => t("search.sort_by"), :selected => @sort, collection: @sort_possibilities, as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s", :label_method => lambda { |el| t "search.sort.#{el.first}" } %>
 <% end %>
