Changes for ingredient fields (#253)
* fix: duplicate ingredient in create + update

* fix: ingredient request

* fix: recipe form minor

* fix: ingredient select and new form

* feat: add traduction for point of sale and fix weird hours

* fix: package-lock

* fix: trad new point of sale

--- a/app/views/point_of_sales/_opening_hours_fields.html.erb
+++ b/app/views/point_of_sales/_opening_hours_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields uk-width-1-3">
   <div class="uk-card uk-card-default uk-card-body">
-    <h3 class="uk-card-title">Hours</h3>
+    <h3 class="uk-card-title"><%= t('point_of_sale.hour') %></h3>
     <div class=" uk-grid">
       <div class="uk-width-1-1">
         <%= f.input :day, label: t('point_of_sale.day') %>
