--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -40,7 +40,7 @@
   <div class="uk-child-width-1-2@m" uk-grid>
     <div>
       <div class="uk-padding">
-        <h2 class="title"><%= t("recipe.title.ingredient") %></h2>
+        <h2 class="title"><%= t("recipe.title.ingredients") %></h2>
         <div class="uk-card uk-card-default uk-card-body">
           <% @recipe.recipe_ingredients.each do |recipe_ingredient| %>
             <div class="uk-grid-small" uk-grid>
