--- a/app/views/recipes/_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_recipe_ingredient_fields.html.erb
@@ -2,9 +2,15 @@
   <div class="uk-card uk-card-default uk-card-body">
     <h3 class="uk-card-title"><%= t("recipe.title.new_ingredient_elem") %></h3>
     <div class=" uk-grid">
-      <div class="uk-width-1-1">
-        <%= f.input :ingredient, :label => t("recipe.title.ingredient"), collection: Ingredient.where(:confirmed => true).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {class: "uk-select"}, defaults: {input_class: "uk-select"} %>
+      <div id="select_container" class="uk-width-1-1">
+        <%= f.input :ingredient, :label => t("recipe.title.ingredient "), collection: Ingredient.where(:confirmed => true).order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+          slimselect: true,
+          slimselectNoResult: t('slimselect.ustensils.no_result'),
+          slimselectSearchPlaceholder: t('slimselect.ustensils.search_placeholder'),
+          slimselectPlaceholder: t('slimselect.ustensils.placeholder'),
+        }, defaults: {input_class: ""} %>
       </div>
+
       <%= f.simple_fields_for RecipeQuantity.new do |ff| %>
         <div class="uk-width-1-2">
           <%= ff.input :value, label: t("recipe.title.quantity_value") %>
