#243 Shopping list quantities (#268)
* Shopping list ingredients now have quantities.
Quantities can add up.
If no shopping list, can create a new one from recipe page.

* git rm yarn.lock

* API ok

--- a/app/views/shopping_lists/show.html.erb
+++ b/app/views/shopping_lists/show.html.erb
@@ -2,9 +2,12 @@
   <h2 class="title">Liste de courses : "<%= @shopping_list.name %>"</h2>
   <div class="uk-align-center">
     <ul class="uk-list uk-list-bullet">
-      <% @shopping_list.ingredients.each do |ingredient| %>
+      <% @shopping_list.shopping_list_ingredients.each do |elem| %>
         <li>
-          <%= ingredient.name %>
+          <%= elem.ingredient.name %>
+          <% if (elem.shopping_list_quantity) %>
+            <div class="uk-text-meta">Au moins <%= elem.shopping_list_quantity.value %> <%= elem.shopping_list_quantity.quantity_type.name %></div>
+          <% end %>
         </li>
       <% end %>
     </ul>
